3rdparty/AvaSpecDLL-setup32/MAINDIR/examples/vcpp2008/avaspec.h

#define     USER_ID_LEN             64
#define     AVS_SERIAL_LEN          10
#define     MAX_TEMP_SENSORS        3
#define     ROOT_NAME_LEN           6
#define     NR_WAVELEN_POL_COEF     5
#define     NR_NONLIN_POL_COEF      8
#define     MAX_VIDEO_CHANNELS      2
#define     NR_DEFECTIVE_PIXELS     30
#define     MAX_NR_PIXELS           4096
#define     NR_TEMP_POL_COEF        5
#define     NR_DAC_POL_COEF         2
#define     SAT_PEAK_INVERSION      2
#define     LEVEL_TRIGGER_SOURCE    1
#define     HW_TRIGGER_MODE         1
#define     SW_TRIGGER_MODE	        0
#define     EDGE_TRIGGER_SOURCE  	0
#define     LEVEL_TRIGGER_SOURCE	1
typedef enum
{
        UNKNOWN,
        USB_AVAILABLE,
        USB_IN_USE_BY_APPLICATION,
        USB_IN_USE_BY_OTHER,
		ETH_AVAILABLE,
		ETH_IN_USE_BY_APPLICATION,
		ETH_IN_USE_BY_OTHER,
		ETH_ALREADY_IN_USE_USB
} DEVICE_STATUS;
typedef enum {
    RS232,
    USB5216,
    USBMINI,
    USB7010,
    ETH7010
} InterfaceType;
typedef struct 
{
    char            SerialNumber[AVS_SERIAL_LEN];
    char            UserFriendlyName[USER_ID_LEN];
    unsigned char   Status;
} AvsIdentityType;
typedef uint8 SensorType;
typedef struct
{
    SensorType              m_SensorType;
    uint16                  m_NrPixels;
    float                   m_aFit[NR_WAVELEN_POL_COEF];
    bool                    m_NLEnable;
    double                  m_aNLCorrect[NR_NONLIN_POL_COEF];
    double                  m_aLowNLCounts;
    double                  m_aHighNLCounts;
    float                   m_Gain[MAX_VIDEO_CHANNELS];
    float                   m_Reserved;
    float                   m_Offset[MAX_VIDEO_CHANNELS];
    float                   m_ExtOffset;
    uint16                  m_DefectivePixels[NR_DEFECTIVE_PIXELS];
} DetectorType;
typedef struct
{
    uint16                  m_SmoothPix;
    uint8                   m_SmoothModel;
} SmoothingType;
typedef struct
{
    SmoothingType           m_Smoothing;
    float                   m_CalInttime;
    float                   m_aCalibConvers[MAX_NR_PIXELS];
} SpectrumCalibrationType;
typedef struct
{
    SpectrumCalibrationType m_IntensityCalib;
    uint8                   m_CalibrationType;
    uint32                  m_FiberDiameter;
} IrradianceType;
typedef struct
{
    float                   m_aSpectrumCorrect[MAX_NR_PIXELS];
} SpectrumCorrectionType;
 

typedef struct
{
    uint8                   m_Enable;
    uint8                   m_ForgetPercentage;
} DarkCorrectionType;
typedef struct
{
    uint8                   m_Mode;
    uint8                   m_Source;
    uint8                   m_SourceType;
} TriggerType;
typedef struct
{
    uint16                  m_StrobeControl;
    uint32                  m_LaserDelay;
    uint32                  m_LaserWidth;
    float                   m_LaserWaveLength;
    uint16                  m_StoreToRam;
} ControlSettingsType;
 

typedef struct
{
	unsigned char  InterfaceType;			// 1
	unsigned char  serial[AVS_SERIAL_LEN];  // 10
	unsigned short port;                    // 2
	unsigned char  status;                  // 1
	unsigned int   RemoteHostIp;            // 4 (IP address op computer connected to spectrometer)
	unsigned int   LocalIp;					// 4 (IP address of spectrometer)
	unsigned char  reserved[4];             // 4
} BroadcastAnswerType;
typedef struct
{
    uint16                  m_StartPixel;			// 2
    uint16                  m_StopPixel;            // 2
    float                   m_IntegrationTime;      // 4
    uint32                  m_IntegrationDelay;     // 4
    uint32                  m_NrAverages;			// 4
    DarkCorrectionType      m_CorDynDark;           // 2
    SmoothingType           m_Smoothing;			// 3
    uint8                   m_SaturationDetection;  // 1 
    TriggerType             m_Trigger;				// 3
    ControlSettingsType     m_Control;				// 16
} MeasConfigType;
typedef struct
{
    uint16                  m_Date;
    uint16                  m_Time;
} TimeStampType;
typedef struct
{
    bool                    m_Enable;
    MeasConfigType          m_Meas;
    int16                   m_Nmsr;
} StandAloneType;
typedef struct
{
	int32					m_Nmsr;
	uint8					m_Reserved[8]; // for future use and backwards compatibility
}DynamicStorageType;
typedef struct
{
    bool                    m_Enable;
    float                   m_Setpoint;     // [degree Celsius]
    float                   m_aFit[NR_DAC_POL_COEF];
} TecControlType;
typedef struct
{
    float                   AnalogLow[2];
    float                   AnalogHigh[2];
    float                   DigitalLow[10];
    float                   DigitalHigh[10];
} ProcessControlType;
typedef struct 
{
	uint32				 m_IpAddr;
	uint32				 m_NetMask;
	uint32				 m_Gateway;
	uint8				 m_DhcpEnabled;
	uint16				 m_TcpPort;
	uint8				 m_LinkStatus;
} EthernetSettingsType;
typedef enum
{
    SENS_HAMS8378_256 = 1,
    SENS_HAMS8378_1024,
    SENS_ILX554,
    SENS_HAMS9201,
    SENS_TCD1304,
    SENS_TSL1301,
    SENS_TSL1401,
    SENS_HAMS8378_512,
    SENS_HAMS9840,
    SENS_ILX511,
    SENS_HAMS10420_2048X64,
    SENS_HAMS11071_2048X64,
    SENS_HAMS7031_1024X122,
    SENS_HAMS7031_1024X58,
    SENS_HAMS11071_2048X16,
    SENS_HAMS11155_2048,
    SENS_SU256LSB,
    SENS_SU512LDB,
    SENS_HAMS11638 = 21,
    SENS_HAMS11639,
    SENS_HAMS12443,
    SENS_HAMG9208_512
} SENS_TYPE;
//----------------------------------------------------------------------------
// End of definitions
//----------------------------------------------------------------------------

// Return error codes
#define ERR_SUCCESS                     0
#define ERR_INVALID_PARAMETER          -1
#define ERR_OPERATION_NOT_SUPPORTED    -2
#define ERR_DEVICE_NOT_FOUND           -3
#define ERR_INVALID_DEVICE_ID		   -4
#define ERR_OPERATION_PENDING          -5
#define ERR_TIMEOUT                    -6
#define ERR_INVALID_PASSWORD           -7
#define ERR_INVALID_MEAS_DATA          -8
#define ERR_INVALID_SIZE               -9
#define ERR_INVALID_PIXEL_RANGE        -10
#define ERR_INVALID_INT_TIME           -11
#define ERR_INVALID_COMBINATION        -12
#define ERR_INVALID_CONFIGURATION      -13
#define ERR_NO_MEAS_BUFFER_AVAIL       -14
#define ERR_UNKNOWN                    -15
#define ERR_COMMUNICATION              -16
#define ERR_NO_SPECTRA_IN_RAM          -17
#define ERR_INVALID_DLL_VERSION        -18
#define ERR_NO_MEMORY                  -19
#define ERR_DLL_INITIALISATION         -20
#define ERR_INVALID_STATE              -21
// Return error codes; DeviceData check
#define ERR_INVALID_PARAMETER_NR_PIXELS    -100
#define ERR_INVALID_PARAMETER_ADC_GAIN     -101
#define ERR_INVALID_PARAMETER_ADC_OFFSET   -102
// Return error codes; PrepareMeasurement check
#define ERR_INVALID_MEASPARAM_AVG_SAT2     -110
#define ERR_INVALID_MEASPARAM_AVG_RAM      -111
#define ERR_INVALID_MEASPARAM_SYNC_RAM     -112
#define ERR_INVALID_MEASPARAM_LEVEL_RAM    -113
#define ERR_INVALID_MEASPARAM_SAT2_RAM     -114
#define ERR_INVALID_MEASPARAM_FWVER_RAM    -115 //StoreToRAM in 0.20.0.0 and later
#define ERR_INVALID_MEASPARAM_DYNDARK      -116
// Return error codes; SetSensitivityMode check
#define ERR_NOT_SUPPORTED_BY_SENSOR_TYPE   -120
#define ERR_NOT_SUPPORTED_BY_FW_VER        -121
#define ERR_NOT_SUPPORTED_BY_FPGA_VER      -122